Add ingredient editing functionality to edit_recipe

--- a/templates/create_recipe.html
+++ b/templates/create_recipe.html
@@ -54,30 +54,32 @@ New recipe
 
     </form>
 
-    <!-- Add ingredients and units -->
-
     <!-- <h4 class="mb-3">Falta algún ingrediente o una unidad?</h4>
 
-    <form action="/create_recipe" method="post">
-        <div class="row mb-3 align-items-start">
-            <label for="new_ing" class="col-sm-2 col-form-label mb-2">Nuevo ingrediente</label>
-            <div class="col-sm-6">
-                <input type="text" class="form-control mb-2" id="new_ing" name="new_ing">
+    <form action="/RUTAAAA" method="post">
+        <div class="row mb-3">
+            <div class="col-sm-3 mb-2">
+                <label for="new_ing" class="col-form-label">Nuevo ingrediente</label>
             </div>
-            <div class="col-auto">
-                <button class="btn btn-warning mb-2">Agregar</button>
+            <div class="col-sm-6  mb-2">
+                <input type="text" class="form-control" id="new_ing" name="new_ing">
+            </div>
+            <div class="col-auto mb-2">
+                <button class="btn btn-warning">Agregar</button>
             </div>
         </div>
     </form>
 
-    <form action="/create_recipe" method="post">
+    <form action="/RUTAAAA" method="post">
         <div class="row mb-3 align-items-start">
-            <label for="new_unit" class="col-sm-2 col-form-label mb-2">Nueva unidad</label>
-            <div class="col-sm-6">
-                <input type="text" class="form-control  mb-2" id="new_unit" name="new_unit">
+            <div class="col-sm-3 mb-2">
+                <label for="new_unit" class="col-form-label">Nueva unidad</label>
             </div>
-            <div class="col-auto">
-                <button class="btn btn-warning mb-2">Agregar</button>
+            <div class="col-sm-6 mb-2">
+                <input type="text" class="form-control" id="new_unit" name="new_unit">
+            </div>
+            <div class="col-auto mb-2">
+                <button class="btn btn-warning">Agregar</button>
             </div>
         </div>
     </form> -->
