--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -50,7 +50,7 @@ Edit recipe
                     </select>
                 </div>
                 <div class="col-auto mb-2">
-                    <button type="button" class="btn btn-secondary" id="remove_ing_input_{{ loop.index }}">
+                    <button type="button" class="btn btn-secondary minus-button" id="remove_ing_input_{{ loop.index }}">
                         <i class="bi bi-dash-square" id="remove_icon_{{ loop.index }}"></i>
                     </button>
                 </div>
@@ -58,7 +58,7 @@ Edit recipe
             {% endfor %}
         </section>
 
-        <button type="button" class="btn btn-info" id="add_ing_input">Agregar ingrediente</button>
+        <button type="button" class="btn btn-info mb-3" id="add_ing_input">Agregar ingrediente</button>
 
         <div class="mb-3">
             <label for="recipe_instructions" class="form-label">Instructions</label>
@@ -71,28 +71,32 @@ Edit recipe
     </form>
 
     <!-- Add ingredients and units -->
-    <h4>Falta algún ingrediente o una unidad?</h4>
+    <h4 class="mb-3">Falta algún ingrediente o una unidad?</h4>
 
     <form action="/RUTAAAA" method="post">
-        <div class="row mb-3 align-items-start">
-            <label for="new_ing" class="col-sm-2 col-form-label mb-2">Nuevo ingrediente</label>
-            <div class="col-sm-6">
-                <input type="text" class="form-control mb-2" id="new_ing" name="new_ing">
+        <div class="row mb-3">
+            <div class="col-sm-3 mb-2">
+                <label for="new_ing" class="col-form-label">Nuevo ingrediente</label>
             </div>
-            <div class="col-auto">
-                <button class="btn btn-warning mb-2">Agregar</button>
+            <div class="col-sm-6  mb-2">
+                <input type="text" class="form-control" id="new_ing" name="new_ing">
+            </div>
+            <div class="col-auto mb-2">
+                <button class="btn btn-warning">Agregar</button>
             </div>
         </div>
     </form>
 
     <form action="/RUTAAAA" method="post">
         <div class="row mb-3 align-items-start">
-            <label for="new_unit" class="col-sm-2 col-form-label mb-2">Nueva unidad</label>
-            <div class="col-sm-6">
-                <input type="text" class="form-control  mb-2" id="new_unit" name="new_unit">
+            <div class="col-sm-3 mb-2">
+                <label for="new_unit" class="col-form-label">Nueva unidad</label>
             </div>
-            <div class="col-auto">
-                <button class="btn btn-warning mb-2">Agregar</button>
+            <div class="col-sm-6 mb-2">
+                <input type="text" class="form-control" id="new_unit" name="new_unit">
+            </div>
+            <div class="col-auto mb-2">
+                <button class="btn btn-warning">Agregar</button>
             </div>
         </div>
     </form>
@@ -109,12 +113,13 @@ Edit recipe
     document.addEventListener('DOMContentLoaded', function () {
         console.log("Script loaded!"); // Check if the script is loaded
 
-        // Check the amount of input field exiting after load
-        i = document.querySelectorAll("button i").length;
+        // Check the amount of input field (i.e.minus buttons) existing after load
+        const button_list = document.querySelectorAll(".minus-button");
+        let i = button_list.length;
+        
+        // Helper functions
 
-        // Attach the event listener to the button
-        const add_ing_input = document.getElementById('add_ing_input');
-
+        // Create the HTML code to be added: input and label tags
         function ing_input(number) {
             console.log("i es " + i);
             return (
@@ -127,7 +132,7 @@ Edit recipe
                     <label class="visually-hidden" for="unit_${number}">Unit</label>
                     <select class="form-select" id="unit_${number}" name="unit_${number}">
                         <option selected>Choose unit</option>
-                        {% for unit in units %}
+                        {% for unit in all_units %}
                         <option value="{{unit['id']}}">{{unit["name"]}}</option>
                         {% endfor %}
                     </select>
@@ -136,13 +141,13 @@ Edit recipe
                     <label class="visually-hidden" for="ingredient_${number}">Ingredient</label>
                     <select class="form-select" id="ingredient_${number}" name="ingredient_${number}">
                         <option selected>Choose ingredient</option>
-                        {% for ingredient in ingredients %}
+                        {% for ingredient in all_ingredients %}
                         <option value="{{ingredient['id']}}">{{ingredient["name"]}}</option>
                         {% endfor %}
                     </select>
                 </div>
                 <div class="col-auto mb-2">
-                    <button type="button" class="btn btn-secondary" id="remove_ing_input_${number}">
+                    <button type="button" class="btn btn-secondary minus-button" id="remove_ing_input_${number}">
                         <i class="bi bi-dash-square" id="remove_icon_${number}"></i>
                     </button>
                 </div>
@@ -150,6 +155,30 @@ Edit recipe
                 `
             )};
 
+        // Create function to remove input line
+        function remove_ing_input(button_id) {
+            document.querySelector("#" + button_id).addEventListener('click', function(event) {
+            console.log("Minus button clicked");
+            // Prevent default behavior
+            event.preventDefault();
+            console.log(event.target.id);
+            target_id = event.target.id;
+            index = target_id.substring(target_id.length - 1);
+            console.log(index);
+            document.querySelector("#ing_" + index).remove();
+            console.log("Input removed!");
+        })
+        }
+
+        // Create remove_input_ing functions for the existing input fields
+        for (let i = 0; i < button_list.length; i++) {
+            remove_ing_input(button_list[i].getAttribute("id"));
+        } 
+
+
+        // Attach the event listener to the button
+        const add_ing_input = document.getElementById('add_ing_input');
+        
         // Verify if the element is found
         if (add_ing_input) {
             console.log("add_ing_input element found!");
@@ -174,22 +203,15 @@ Edit recipe
                 // Append the new <div> to the form
                 document.querySelector("#ingredients").appendChild(div);
 
+                // Create function to remove input line
+                remove_ing_input("remove_ing_input_" + i);
 
             });
         } else {
             console.log("Button not found!");
         }
 
-        // Create function to remove input line
-        document.querySelector("#remove_ing_input_" + i).addEventListener('click', function(event) {
-            // Prevent default behavior
-            event.preventDefault();
-            console.log(event.target.id);
-            target_id = event.target.id;
-            index = target_id.substring(target_id.length - 1);
-            console.log(index);
-            document.querySelector("#ing_" + index).remove();
-        })
+
     });
 </script>
 
