Add copy to clipboard function

--- a/templates/create_recipe.html
+++ b/templates/create_recipe.html
@@ -53,9 +53,9 @@ New recipe
 
     </form>
 
-    <!-- <h4 class="mb-3">Falta algún ingrediente o una unidad?</h4>
+    <h4 class="mb-3">Falta algún ingrediente o una unidad?</h4>
 
-    <form action="/RUTAAAA" method="post">
+    <form action="/create_ingredient" method="post">
         <div class="row mb-3">
             <div class="col-sm-3 mb-2">
                 <label for="new_ing" class="col-form-label">Nuevo ingrediente</label>
@@ -69,7 +69,7 @@ New recipe
         </div>
     </form>
 
-    <form action="/RUTAAAA" method="post">
+    <form action="/create_unit" method="post">
         <div class="row mb-3 align-items-start">
             <div class="col-sm-3 mb-2">
                 <label for="new_unit" class="col-form-label">Nueva unidad</label>
@@ -81,7 +81,7 @@ New recipe
                 <button class="btn btn-warning">Agregar</button>
             </div>
         </div>
-    </form> -->
+    </form>
 
 </div>
 
