--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -74,7 +74,7 @@ Edit recipe
     <!-- Add ingredients and units -->
     <h4 class="mb-3">Falta algún ingrediente o una unidad?</h4>
 
-    <form action="/RUTAAAA" method="post">
+    <form action="/create_ingredient" method="post">
         <div class="row mb-3">
             <div class="col-sm-3 mb-2">
                 <label for="new_ing" class="col-form-label">Nuevo ingrediente</label>
@@ -88,7 +88,7 @@ Edit recipe
         </div>
     </form>
 
-    <form action="/RUTAAAA" method="post">
+    <form action="/create_unit" method="post">
         <div class="row mb-3 align-items-start">
             <div class="col-sm-3 mb-2">
                 <label for="new_unit" class="col-form-label">Nueva unidad</label>
