--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,15 +26,15 @@
 
         <nav class="navbar navbar-expand-md">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">Planned Recipe</a>
+                <a class="navbar-brand" href="/">Meal planner</a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbar">
                     <ul class="navbar-nav me-auto mt-2">
-                        <li class="nav-item"><a class="nav-link" href="/create_recipe">New recipe</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/search">Search</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/create_plan">Create plan</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/create_recipe">Nueva receta</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/search">Buscar</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/create_plan">Crear plan</a></li>
                     </ul>
                 </div>
             </div>
