--- a/templates/shopping_list.html
+++ b/templates/shopping_list.html
@@ -1,16 +1,16 @@
 {% extends "layout.html" %}
 
 {% block title %}
-Shopping List
+Meal plan summary
 {% endblock %}
 
 {% block main %}
 
-<h1 class="text-center mb-5">Shopping List</h1>
+<h1 class="text-center mb-5">Resumen del meal plan</h1>
 <section class="container-fluid">
     <div class="card mb-5">
         <div class="card-header d-flex justify-content-between">
-            <h5 class="m-0">Recipes List</h5>
+            <h5 class="m-0">Lista de Recetas</h5>
             <button id="copy-recipes" type="button" class="btn btn-outline-secondary btn-sm"><i
                     class="bi bi-clipboard"></i><i class="bi bi-clipboard-check d-none"></i></button>
         </div>
@@ -25,7 +25,7 @@ Shopping List
 
     <div class="card mb-5">
         <div class="card-header d-flex justify-content-between">
-            <h5 class="m-0">Shopping List</h5>
+            <h5 class="m-0">Lista de compras</h5>
             <button id="copy-shopping" type="button" class="btn btn-outline-secondary btn-sm"><i
                     class="bi bi-clipboard"></i><i class="bi bi-clipboard-check d-none"></i></button>
         </div>
