Change layout Edit and Delete buttons in recipe

--- a/templates/create_plan.html
+++ b/templates/create_plan.html
@@ -23,7 +23,7 @@
             {% for recipe in recipes %}
                 <input name="id_{{ loop.index }}" type="hidden" value="{{ recipe['id'] }}">
             {% endfor %}
-            <button type="submit" class="btn btn-info mb-2"><i class="bi bi-card-checklist"></i> Lista de compras</button>
+            <button type="submit" class="btn btn-info mb-2"><i class="bi bi-card-checklist"></i> Resumen y lista de compras</button>
         </form>
     </section>
 
