--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
                             <h5 class="card-title mb-3">{{ row["name"] }}</h5>
                             <form action="/" method="post">
                                 <input name="id" type="hidden" value="{{ row['id'] }}">
-                                <button type="submit" class="btn btn-primary">Receta</button>
+                                <button type="submit" class="btn btn-primary stretched-link">Receta</button>
                             </form>
                         </div>
                     </div>
