Fix adding ingredients from edit_recipe

--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -82,6 +82,7 @@ Edit recipe
             <div class="col-sm-6  mb-2">
                 <input type="text" class="form-control" id="new_ing" name="new_ing">
             </div>
+            <input name="recipe_id" type="hidden" value="{{ recipe[0]['id'] }}">
             <div class="col-auto mb-2">
                 <button class="btn btn-warning">Agregar</button>
             </div>
