Add edit_ingredients and editinct functionality for ingredients

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,9 +32,11 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbar">
                     <ul class="navbar-nav me-auto mt-2">
+                        <li class="nav-item"><a class="nav-link" href="/create_plan">Crear plan</a></li>
                         <li class="nav-item"><a class="nav-link" href="/create_recipe">Nueva receta</a></li>
                         <li class="nav-item"><a class="nav-link" href="/search">Buscar</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/create_plan">Crear plan</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/edit_ingredients">Editar ingredientes</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/edit_units">Editar unidades</a></li>
                     </ul>
                 </div>
             </div>
