--- a/templates/edit_ingredients.html
+++ b/templates/edit_ingredients.html
@@ -17,7 +17,7 @@
                         <input name="ing_id" type="hidden" value="{{ ingredient['id'] }}">
                         <button type="submit" class="btn btn-outline-secondary mx-3"><i class="bi bi-pencil"></i></button>
                     </form>
-                    <form action="/RUTAAAA" method="get">
+                    <form action="/delete_ingredient" method="get">
                         <input name="ing_id" type="hidden" value="{{ ingredient['id'] }}">
                         <button type="submit" class="btn btn-outline-secondary"><i class="bi bi-trash"></i></button>
                     </form>
