--- a/templates/edit_single_ingredient.html
+++ b/templates/edit_single_ingredient.html
@@ -12,7 +12,7 @@
         <div class="col-auto">
             <input type="text" class="form-control col-sm-3" id="ing_name" name="ing_name" value="{{ ingredient[0]["name"] }}">
         </div>
-        <button type="submit" class="btn btn-info col-auto mx-3"><i class="bi bi-pen"></i>  Editar</button>
+        <button type="submit" class="btn btn-color col-auto mx-3"><i class="bi bi-pen"></i>  Editar</button>
         
     </form>
 </section>
