--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
                         <div class="card-body">
                             <form action="/" method="post">
                                 <input name="id" type="hidden" value="{{ row['id'] }}">
-                                <button type="submit" class="btn stretched-link"><h5 class="card-title">{{ row["name"] }}</h5></button>
+                                <button type="submit" class="btn stretched-link"><p class="card-title">{{ row["name"] }}</p></button>
                             </form>
                         </div>
                     </div>
