--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,32 +2,36 @@
 
 <html lang="es">
 
-    <head>
+<head>
 
-        <meta charset="utf-8">
-        <meta name="viewport" content="initial-scale=1, width=device-width">
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, width=device-width">
 
-        <!-- http://getbootstrap.com/docs/5.3/ -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        <!-- Bootstrap icons -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- http://getbootstrap.com/docs/5.3/ -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <!-- Bootstrap icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-        <!--Source: https://www.flaticon.com/free-icons/nutrition - Nutrition icons created by Roundicons Premium - Flaticon-->
-        <link href="/static/favicon.ico" rel="icon" title="nutrition icon">
+    <!--Source: https://www.flaticon.com/free-icons/nutrition - Nutrition icons created by Roundicons Premium - Flaticon-->
+    <link href="/static/favicon.ico" rel="icon" title="nutrition icon">
 
-        <link href="/static/styles.css" rel="stylesheet">
+    <link href="/static/styles.css" rel="stylesheet">
 
-        <title>Meal Planner: {% block title %}{% endblock %}</title>
+    <title>Meal Planner: {% block title %}{% endblock %}</title>
 
-    </head>
+</head>
 
-    <body>
-
-        <nav class="navbar navbar-expand-md">
+<body>
+    <header>
+        <nav class="navbar navbar-expand-md fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">Meal planner</a>
-                <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
+                <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"
+                    class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbar">
@@ -41,21 +45,22 @@
                 </div>
             </div>
         </nav>
+    </header>
 
-        <main class="container py-5">
-            {% block main %}{% endblock %}
-        </main>
+    <main class="container my-5 pt-5">
+        {% block main %}{% endblock %}
+    </main>
 
-        <footer class="fixed-bottom">
+    <footer class="fixed-bottom">
 
-            <p class="my-2 small text-center text-muted">
-                Made by <a href="https://github.com/CarolinaCampi">CC</a>
-            </p>
+        <p class="my-2 small text-center">
+            Made by <a href="https://github.com/CarolinaCampi">CC</a>
+        </p>
 
-        </footer>
-        {% block script %}
+    </footer>
+    {% block script %}
 
-        {% endblock %}
-    </body>
+    {% endblock %}
+</body>
 
 </html>
