--- a/templates/search.html
+++ b/templates/search.html
@@ -7,27 +7,27 @@ Result
 {% block main %}
 
     <section class="mb-4">
-        <h1 class="text-center mb-5">Search recipes</h1>
+        <h2 class="text-center mb-5">Buscar recetas</h2>
         <form action="/search" method="get" class="row justify-content-center">
-            <div class="col-9">
-                <label class="visually-hidden" for="search_bar">Search</label>
-                <input type="text" class="form-control" id="search_bar" placeholder="Search" name="query">
+            <div class="col-md-9 mb-3">
+                <label class="visually-hidden" for="search_bar">Buscar</label>
+                <input type="text" class="form-control" id="search_bar" placeholder="Buscar" name="query">
             </div>
             <div class="col-auto">
-                <button type="submit" class="btn btn-warning">Search</button>
+                <button type="submit" class="btn btn-color">Buscar</button>
             </div>
         </form>
     </section>
     <section class="container-fluid text-center">
         <div class="row">
             {% for recipe in recipes %}
-                <div class="col-md-3 my-3">
+                <div class="col-md-4 my-3">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title mb-3">{{ recipe["name"] }}</h5>
+                            <p class="card-title mb-3">{{ recipe["name"] }}</p>
                             <form action="/search" method="post">
                                 <input name="id" type="hidden" value="{{ recipe['id'] }}">
-                                <button type="submit" class="btn btn-primary">Receta</button>
+                                <button type="submit" class="btn btn-color">Receta</button>
                             </form>
                         </div>
                     </div>
