--- a/templates/shopping_list.html
+++ b/templates/shopping_list.html
@@ -10,7 +10,7 @@ Meal plan summary
 <section class="container-fluid">
     <div class="card mb-5">
         <div class="card-header d-flex justify-content-between">
-            <h5 class="m-0">Lista de Recetas</h5>
+            <h5 class="m-0 mt-1">Lista de Recetas</h5>
             <button id="copy-recipes" type="button" class="btn btn-outline-secondary btn-sm"><i
                     class="bi bi-clipboard"></i><i class="bi bi-clipboard-check d-none"></i></button>
         </div>
@@ -25,7 +25,7 @@ Meal plan summary
 
     <div class="card mb-5">
         <div class="card-header d-flex justify-content-between">
-            <h5 class="m-0">Lista de compras</h5>
+            <h5 class="m-0 mt-1">Lista de compras</h5>
             <button id="copy-shopping" type="button" class="btn btn-outline-secondary btn-sm"><i
                     class="bi bi-clipboard"></i><i class="bi bi-clipboard-check d-none"></i></button>
         </div>
